# nexus

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix
schema/: nexus.concept.schema
spec/: grammar.md
spec/examples/: flow-graph.nexus  patterns-and-edits.nexus  tier-0-canonical.nexus
src/: error.rs  lib.rs  parser.rs  renderer.rs
tests/: parser.rs  renderer.rs
