[package]
name         = "nexus"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nexus"
description  = "Nexus semantic content vocabulary written in NOTA syntax, with translator binaries for Signal frames."

[lib]
name = "nexus"
path = "src/lib.rs"

[[bin]]
name = "nexus-daemon"
path = "src/main.rs"

[[bin]]
name = "nexus-parse"
path = "src/bin/parse.rs"

[[bin]]
name = "nexus-render"
path = "src/bin/render.rs"

[dependencies]
thiserror  = "2"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }
kameo      = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros", "tracing"] }
signal     = { git = "https://github.com/LiGoldragon/signal.git", branch = "main" }
nota-next  = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
